// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render BoroughsSidebar component with all boroughs 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="modal-open"
    data-rr-ui-modal-open=""
    style="padding-right: 1024px;"
  >
    <div />
    <div
      aria-modal="true"
      class="offcanvas offcanvas-start offcanvas-toggling show"
      role="dialog"
      style="visibility: visible;"
      tabindex="-1"
    >
      <div
        class="offcanvas-header"
      >
        <div
          class="offcanvas-title h5"
        >
          <h3>
            London Boroughs (
            33
            )
          </h3>
        </div>
        <button
          aria-label="Close"
          class="btn-close"
          type="button"
        />
      </div>
      <div
        class="offcanvas-body"
      >
        <div
          class="row p-1"
        >
          <div
            class="col-md-12"
          >
            <div
              class="d-flex position-relative"
            >
              <i
                class="bi bi-search text-secondary fs-4 ps-2 position-absolute"
              />
              <input
                class="mb-3 ps-5 form-control"
                placeholder="Search by name"
                value=""
              />
              <i
                class="bi bi-backspace text-secondary fs-4 ps-2"
                role="button"
              />
            </div>
            <div
              class="row mb-3 justify-content-center align-items-center"
            >
              <div
                class="col-md-4"
              >
                <span>
                  View
                </span>
              </div>
              <div
                class="col-md-7"
              >
                <div
                  class="btn-group"
                  role="group"
                >
                  <input
                    autocomplete="off"
                    checked=""
                    class="btn-check"
                    id="radio-all"
                    name="radio-all-name"
                    type="radio"
                    value="all"
                  />
                  <label
                    class="btn btn-outline-primary"
                    for="radio-all"
                    tabindex="0"
                  >
                    All
                  </label>
                  <input
                    autocomplete="off"
                    class="btn-check"
                    id="radio-favorites"
                    name="radio-favorites-name"
                    type="radio"
                    value="favorites"
                  />
                  <label
                    class="btn btn-outline-primary"
                    for="radio-favorites"
                    tabindex="0"
                  >
                    Favorites (0)
                  </label>
                </div>
              </div>
            </div>
            <div
              class="row mb-3 justify-content-center align-items-center"
            >
              <div
                class="col-md-4"
              >
                <span>
                  Sort ASC By
                </span>
              </div>
              <div
                class="col-md-7"
              >
                <div
                  class="btn-group"
                  role="group"
                >
                  <input
                    autocomplete="off"
                    checked=""
                    class="btn-check"
                    id="radio-id"
                    name="radio-id-name"
                    type="radio"
                    value="id"
                  />
                  <label
                    class="btn btn-outline-primary"
                    for="radio-id"
                    tabindex="0"
                  >
                    Id
                  </label>
                  <input
                    autocomplete="off"
                    class="btn-check"
                    id="radio-name"
                    name="radio-name-name"
                    type="radio"
                    value="name"
                  />
                  <label
                    class="btn btn-outline-primary"
                    for="radio-name"
                    tabindex="0"
                  >
                    Name
                  </label>
                  <input
                    autocomplete="off"
                    class="btn-check"
                    id="radio-area_hectares"
                    name="radio-area_hectares-name"
                    type="radio"
                    value="area_hectares"
                  />
                  <label
                    class="btn btn-outline-primary"
                    for="radio-area_hectares"
                    tabindex="0"
                  >
                    Area
                  </label>
                </div>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  01
                   
                  Kingston upon Thames
                </h5>
                <h5>
                  Code: 
                  E09000021
                </h5>
                <h5>
                  Area Hectares: 
                  3726.117
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  02
                   
                  Croydon
                </h5>
                <h5>
                  Code: 
                  E09000008
                </h5>
                <h5>
                  Area Hectares: 
                  8649.441
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  03
                   
                  Bromley
                </h5>
                <h5>
                  Code: 
                  E09000006
                </h5>
                <h5>
                  Area Hectares: 
                  15013.487
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  04
                   
                  Hounslow
                </h5>
                <h5>
                  Code: 
                  E09000018
                </h5>
                <h5>
                  Area Hectares: 
                  5658.541
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  05
                   
                  Ealing
                </h5>
                <h5>
                  Code: 
                  E09000009
                </h5>
                <h5>
                  Area Hectares: 
                  5554.428
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  06
                   
                  Havering
                </h5>
                <h5>
                  Code: 
                  E09000016
                </h5>
                <h5>
                  Area Hectares: 
                  11445.735
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  07
                   
                  Hillingdon
                </h5>
                <h5>
                  Code: 
                  E09000017
                </h5>
                <h5>
                  Area Hectares: 
                  11570.063
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  08
                   
                  Harrow
                </h5>
                <h5>
                  Code: 
                  E09000015
                </h5>
                <h5>
                  Area Hectares: 
                  5046.33
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  09
                   
                  Brent
                </h5>
                <h5>
                  Code: 
                  E09000005
                </h5>
                <h5>
                  Area Hectares: 
                  4323.27
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  10
                   
                  Barnet
                </h5>
                <h5>
                  Code: 
                  E09000003
                </h5>
                <h5>
                  Area Hectares: 
                  8674.837
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  11
                   
                  Lambeth
                </h5>
                <h5>
                  Code: 
                  E09000022
                </h5>
                <h5>
                  Area Hectares: 
                  2724.94
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  12
                   
                  Southwark
                </h5>
                <h5>
                  Code: 
                  E09000028
                </h5>
                <h5>
                  Area Hectares: 
                  2991.34
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  13
                   
                  Lewisham
                </h5>
                <h5>
                  Code: 
                  E09000023
                </h5>
                <h5>
                  Area Hectares: 
                  3531.706
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  14
                   
                  Greenwich
                </h5>
                <h5>
                  Code: 
                  E09000011
                </h5>
                <h5>
                  Area Hectares: 
                  5044.19
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  15
                   
                  Bexley
                </h5>
                <h5>
                  Code: 
                  E09000004
                </h5>
                <h5>
                  Area Hectares: 
                  6428.649
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  16
                   
                  Enfield
                </h5>
                <h5>
                  Code: 
                  E09000010
                </h5>
                <h5>
                  Area Hectares: 
                  8220.025
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  17
                   
                  Waltham Forest
                </h5>
                <h5>
                  Code: 
                  E09000031
                </h5>
                <h5>
                  Area Hectares: 
                  3880.793
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  18
                   
                  Redbridge
                </h5>
                <h5>
                  Code: 
                  E09000026
                </h5>
                <h5>
                  Area Hectares: 
                  5644.225
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  19
                   
                  Sutton
                </h5>
                <h5>
                  Code: 
                  E09000029
                </h5>
                <h5>
                  Area Hectares: 
                  4384.698
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  20
                   
                  Richmond upon Thames
                </h5>
                <h5>
                  Code: 
                  E09000027
                </h5>
                <h5>
                  Area Hectares: 
                  5876.111
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  21
                   
                  Merton
                </h5>
                <h5>
                  Code: 
                  E09000024
                </h5>
                <h5>
                  Area Hectares: 
                  3762.466
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  22
                   
                  Wandsworth
                </h5>
                <h5>
                  Code: 
                  E09000032
                </h5>
                <h5>
                  Area Hectares: 
                  3522.022
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  23
                   
                  Hammersmith and Fulham
                </h5>
                <h5>
                  Code: 
                  E09000013
                </h5>
                <h5>
                  Area Hectares: 
                  1715.409
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  24
                   
                  Kensington and Chelsea
                </h5>
                <h5>
                  Code: 
                  E09000020
                </h5>
                <h5>
                  Area Hectares: 
                  1238.379
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  25
                   
                  Westminster
                </h5>
                <h5>
                  Code: 
                  E09000033
                </h5>
                <h5>
                  Area Hectares: 
                  2203.005
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  26
                   
                  Camden
                </h5>
                <h5>
                  Code: 
                  E09000007
                </h5>
                <h5>
                  Area Hectares: 
                  2178.932
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  27
                   
                  Tower Hamlets
                </h5>
                <h5>
                  Code: 
                  E09000030
                </h5>
                <h5>
                  Area Hectares: 
                  2157.501
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  28
                   
                  Islington
                </h5>
                <h5>
                  Code: 
                  E09000019
                </h5>
                <h5>
                  Area Hectares: 
                  1485.664
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  29
                   
                  Hackney
                </h5>
                <h5>
                  Code: 
                  E09000012
                </h5>
                <h5>
                  Area Hectares: 
                  1904.902
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  30
                   
                  Haringey
                </h5>
                <h5>
                  Code: 
                  E09000014
                </h5>
                <h5>
                  Area Hectares: 
                  2959.837
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  31
                   
                  Newham
                </h5>
                <h5>
                  Code: 
                  E09000025
                </h5>
                <h5>
                  Area Hectares: 
                  3857.806
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  32
                   
                  Barking and Dagenham
                </h5>
                <h5>
                  Code: 
                  E09000002
                </h5>
                <h5>
                  Area Hectares: 
                  3779.934
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  33
                   
                  City of London
                </h5>
                <h5>
                  Code: 
                  E09000001
                </h5>
                <h5>
                  Area Hectares: 
                  314.942
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-outline-warning w-100 mt-2"
                >
                  Save as Favorite
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render BoroughsSidebar component with favorite boroughs 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="modal-open"
    data-rr-ui-modal-open=""
    style="padding-right: 2048px;"
  >
    <div />
    <div
      aria-modal="true"
      class="offcanvas offcanvas-start offcanvas-toggling show"
      role="dialog"
      style="visibility: visible;"
      tabindex="-1"
    >
      <div
        class="offcanvas-header"
      >
        <div
          class="offcanvas-title h5"
        >
          <h3>
            London Boroughs (
            2
            )
          </h3>
        </div>
        <button
          aria-label="Close"
          class="btn-close"
          type="button"
        />
      </div>
      <div
        class="offcanvas-body"
      >
        <div
          class="row p-1"
        >
          <div
            class="col-md-12"
          >
            <div
              class="d-flex position-relative"
            >
              <i
                class="bi bi-search text-secondary fs-4 ps-2 position-absolute"
              />
              <input
                class="mb-3 ps-5 form-control"
                placeholder="Search by name"
                value=""
              />
              <i
                class="bi bi-backspace text-secondary fs-4 ps-2"
                role="button"
              />
            </div>
            <div
              class="row mb-3 justify-content-center align-items-center"
            >
              <div
                class="col-md-4"
              >
                <span>
                  View
                </span>
              </div>
              <div
                class="col-md-7"
              >
                <div
                  class="btn-group"
                  role="group"
                >
                  <input
                    autocomplete="off"
                    checked=""
                    class="btn-check"
                    id="radio-all"
                    name="radio-all-name"
                    type="radio"
                    value="all"
                  />
                  <label
                    class="btn btn-outline-primary"
                    for="radio-all"
                    tabindex="0"
                  >
                    All
                  </label>
                  <input
                    autocomplete="off"
                    class="btn-check"
                    id="radio-favorites"
                    name="radio-favorites-name"
                    type="radio"
                    value="favorites"
                  />
                  <label
                    class="btn btn-outline-primary"
                    for="radio-favorites"
                    tabindex="0"
                  >
                    Favorites (2)
                  </label>
                </div>
              </div>
            </div>
            <div
              class="row mb-3 justify-content-center align-items-center"
            >
              <div
                class="col-md-4"
              >
                <span>
                  Sort ASC By
                </span>
              </div>
              <div
                class="col-md-7"
              >
                <div
                  class="btn-group"
                  role="group"
                >
                  <input
                    autocomplete="off"
                    checked=""
                    class="btn-check"
                    id="radio-id"
                    name="radio-id-name"
                    type="radio"
                    value="id"
                  />
                  <label
                    class="btn btn-outline-primary"
                    for="radio-id"
                    tabindex="0"
                  >
                    Id
                  </label>
                  <input
                    autocomplete="off"
                    class="btn-check"
                    id="radio-name"
                    name="radio-name-name"
                    type="radio"
                    value="name"
                  />
                  <label
                    class="btn btn-outline-primary"
                    for="radio-name"
                    tabindex="0"
                  >
                    Name
                  </label>
                  <input
                    autocomplete="off"
                    class="btn-check"
                    id="radio-area_hectares"
                    name="radio-area_hectares-name"
                    type="radio"
                    value="area_hectares"
                  />
                  <label
                    class="btn btn-outline-primary"
                    for="radio-area_hectares"
                    tabindex="0"
                  >
                    Area
                  </label>
                </div>
              </div>
            </div>
            <button
              class="btn btn-danger w-100 mb-3 d-flex justify-content-center align-items-center"
            >
              <span
                class="mx-2"
              >
                Clear Favorites
              </span>
              <i
                class="bi bi-trash3 fs-4"
              />
            </button>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  02
                   
                  Croydon
                </h5>
                <h5>
                  Code: 
                  E09000008
                </h5>
                <h5>
                  Area Hectares: 
                  8649.441
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-warning w-100 mt-2"
                >
                  Remove from Favorites
                </button>
              </div>
            </div>
            <div
              class="row mb-3 border rounded bg-light p-2"
            >
              <div
                class="col-md-12"
              >
                <h5
                  class="fw-bold"
                >
                  #
                  25
                   
                  Westminster
                </h5>
                <h5>
                  Code: 
                  E09000033
                </h5>
                <h5>
                  Area Hectares: 
                  2203.005
                </h5>
                <button
                  class="btn btn-primary w-100"
                >
                  View on Map
                </button>
                <button
                  class="btn  btn-warning w-100 mt-2"
                >
                  Remove from Favorites
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
